#257 #247 support for overriding runtime and info based items from designer.